bug fix - contact form overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -739,6 +739,9 @@ hr {
       padding-top: 3rem;
       flex: 1;
       height: 60rem; }
+      @media screen and (max-width: 640px) {
+        .project__container-left {
+          height: 45rem; } }
     .project__container-right {
       flex: 1;
       display: flex;
@@ -805,11 +808,6 @@ hr {
     width: 40%;
     margin-top: 3rem;
     border-radius: 40px; }
-
-@media screen and (max-width: 640px) {
-  #e-portfolio .project__container-right,
-  #learning-package .project__container-right {
-    margin-top: -15rem; } }
 
 .header-cv {
   grid-template-rows: 10vh;
@@ -1064,6 +1062,10 @@ hr {
     .contact-form {
       width: 45rem;
       height: 60rem; } }
+  @media screen and (max-width: 400px) {
+    .contact-form {
+      width: 35rem;
+      height: 50rem; } }
   .contact-form__container {
     display: flex;
     flex-direction: column;
